lib/expr/y.output
Terminals unused in grammar

   MINTOKEN
   CHARACTER
   VOIDTYPE
   ADDRESS
   CALL
   ITERATE
   MEMBER
   POS
   PRAGMA
   PRE
   F2I
   F2S
   I2F
   I2S
   S2B
   S2F
   S2I
   F2X
   I2X
   S2X
   X2F
   X2I
   X2S
   X2X
   XPRINT
   MAXTOKEN


State 226 conflicts: 1 shift/reduce
State 232 conflicts: 1 shift/reduce
State 262 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list action_list

    2 action_list: /* empty */
    3            | action_list action

    4 $@1: /* empty */

    5 action: LABEL ':' $@1 statement_list

    6 statement_list: /* empty */
    7               | statement_list statement

    8 statement: '{' statement_list '}'
    9          | expr_opt ';'

   10 $@2: /* empty */

   11 statement: DECLARE $@2 dcl_list ';'
   12          | IF '(' expr ')' statement else_opt
   13          | FOR '(' variable ')' statement
   14          | FOR '(' expr_opt ';' expr_opt ';' expr_opt ')' statement
   15          | ITERATER '(' variable ')' statement
   16          | UNSET '(' DYNAMIC ')'
   17          | UNSET '(' DYNAMIC ',' expr ')'
   18          | WHILE '(' expr ')' statement

   19 $@3: /* empty */

   20 statement: SWITCH '(' expr $@3 ')' '{' switch_list '}'
   21          | BREAK expr_opt ';'
   22          | CONTINUE expr_opt ';'
   23          | RETURN expr_opt ';'

   24 switch_list: /* empty */
   25            | switch_list switch_item

   26 switch_item: case_list statement_list

   27 case_list: case_item
   28          | case_list case_item

   29 case_item: CASE constant ':'
   30          | DEFAULT ':'

   31 dcl_list: dcl_item
   32         | dcl_list ',' dcl_item

   33 $@4: /* empty */

   34 dcl_item: dcl_name $@4 array initialize

   35 dcl_name: NAME
   36         | DYNAMIC
   37         | ID
   38         | FUNCTION

   39 name: NAME
   40     | DYNAMIC

   41 else_opt: /* empty */
   42         | ELSE statement

   43 expr_opt: /* empty */
   44         | expr

   45 expr: '(' expr ')'
   46     | '(' DECLARE ')' expr
   47     | expr '<' expr
   48     | expr '-' expr
   49     | expr '*' expr
   50     | expr '/' expr
   51     | expr '%' expr
   52     | expr LS expr
   53     | expr RS expr
   54     | expr '>' expr
   55     | expr LE expr
   56     | expr GE expr
   57     | expr EQ expr
   58     | expr NE expr
   59     | expr '&' expr
   60     | expr '|' expr
   61     | expr '^' expr
   62     | expr '+' expr
   63     | expr AND expr
   64     | expr OR expr
   65     | expr ',' expr

   66 $@5: /* empty */

   67 $@6: /* empty */

   68 expr: expr '?' $@5 expr ':' $@6 expr
   69     | '!' expr
   70     | '#' DYNAMIC
   71     | '~' expr
   72     | '-' expr
   73     | '+' expr
   74     | '&' variable
   75     | ARRAY '[' args ']'
   76     | FUNCTION '(' args ')'
   77     | GSUB '(' args ')'
   78     | SUB '(' args ')'
   79     | SUBSTR '(' args ')'
   80     | splitop '(' expr ',' DYNAMIC ')'
   81     | splitop '(' expr ',' DYNAMIC ',' expr ')'
   82     | EXIT '(' expr ')'
   83     | RAND '(' ')'
   84     | SRAND '(' ')'
   85     | SRAND '(' expr ')'
   86     | PROCEDURE '(' args ')'
   87     | PRINT '(' args ')'
   88     | print '(' args ')'
   89     | scan '(' args ')'
   90     | variable assign
   91     | INC variable
   92     | variable INC
   93     | expr IN_OP DYNAMIC
   94     | DEC variable
   95     | variable DEC
   96     | constant

   97 splitop: SPLIT
   98        | TOKENS

   99 constant: CONSTANT
  100         | FLOATING
  101         | INTEGER
  102         | STRING
  103         | UNSIGNED

  104 print: PRINTF
  105      | QUERY
  106      | SPRINTF

  107 scan: SCANF
  108     | SSCANF

  109 variable: ID members
  110         | DYNAMIC index members
  111         | NAME

  112 array: /* empty */
  113      | '[' ']'
  114      | '[' DECLARE ']'

  115 index: /* empty */
  116      | '[' expr ']'

  117 args: /* empty */
  118     | arg_list

  119 arg_list: expr
  120         | arg_list ',' expr

  121 formals: /* empty */
  122        | DECLARE
  123        | formal_list

  124 formal_list: formal_item
  125            | formal_list ',' formal_item

  126 $@7: /* empty */

  127 formal_item: DECLARE $@7 name

  128 members: /* empty */
  129        | member
  130        | '.' ID member

  131 member: '.' ID
  132       | '.' NAME

  133 assign: /* empty */
  134       | '=' expr

  135 initialize: assign

  136 $@8: /* empty */

  137 $@9: /* empty */

  138 initialize: '(' $@8 formals $@9 ')' '{' statement_list '}'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 69
'#' (35) 70
'%' (37) 51
'&' (38) 59 74
'(' (40) 12 13 14 15 16 17 18 20 45 46 76 77 78 79 80 81 82 83 84 85
    86 87 88 89 138
')' (41) 12 13 14 15 16 17 18 20 45 46 76 77 78 79 80 81 82 83 84 85
    86 87 88 89 138
'*' (42) 49
'+' (43) 62 73
',' (44) 17 32 65 80 81 120 125
'-' (45) 48 72
'.' (46) 130 131 132
'/' (47) 50
':' (58) 5 29 30 68
';' (59) 9 11 14 21 22 23
'<' (60) 47
'=' (61) 134
'>' (62) 54
'?' (63) 68
'[' (91) 75 113 114 116
']' (93) 75 113 114 116
'^' (94) 61
'{' (123) 8 20 138
'|' (124) 60
'}' (125) 8 20 138
'~' (126) 71
error (256)
MINTOKEN (258)
INTEGER (259) 101
UNSIGNED (260) 103
CHARACTER (261)
FLOATING (262) 100
STRING (263) 102
VOIDTYPE (264)
ADDRESS (265)
ARRAY (266) 75
BREAK (267) 21
CALL (268)
CASE (269) 29
CONSTANT (270) 99
CONTINUE (271) 22
DECLARE (272) 11 46 114 122 127
DEFAULT (273) 30
DYNAMIC (274) 16 17 36 40 70 80 81 93 110
ELSE (275) 42
EXIT (276) 82
FOR (277) 13 14
FUNCTION (278) 38 76
GSUB (279) 77
ITERATE (280)
ITERATER (281) 15
ID (282) 37 109 130 131
IF (283) 12
LABEL (284) 5
MEMBER (285)
NAME (286) 35 39 111 132
POS (287)
PRAGMA (288)
PRE (289)
PRINT (290) 87
PRINTF (291) 104
PROCEDURE (292) 86
QUERY (293) 105
RAND (294) 83
RETURN (295) 23
SCANF (296) 107
SPLIT (297) 97
SPRINTF (298) 106
SRAND (299) 84 85
SSCANF (300) 108
SUB (301) 78
SUBSTR (302) 79
SWITCH (303) 20
TOKENS (304) 98
UNSET (305) 16 17
WHILE (306) 18
F2I (307)
F2S (308)
I2F (309)
I2S (310)
S2B (311)
S2F (312)
S2I (313)
F2X (314)
I2X (315)
S2X (316)
X2F (317)
X2I (318)
X2S (319)
X2X (320)
XPRINT (321)
OR (322) 64
AND (323) 63
NE (324) 58
EQ (325) 57
GE (326) 56
LE (327) 55
RS (328) 53
LS (329) 52
IN_OP (330) 93
UNARY (331)
DEC (332) 94 95
INC (333) 91 92
CAST (334)
MAXTOKEN (335)


Nonterminals, with rules where they appear

$accept (106)
    on left: 0
program (107)
    on left: 1, on right: 0
action_list (108)
    on left: 2 3, on right: 1 3
action (109)
    on left: 5, on right: 3
$@1 (110)
    on left: 4, on right: 5
statement_list (111)
    on left: 6 7, on right: 1 5 7 8 26 138
statement (112)
    on left: 8 9 11 12 13 14 15 16 17 18 20 21 22 23, on right: 7 12
    13 14 15 18 42
$@2 (113)
    on left: 10, on right: 11
$@3 (114)
    on left: 19, on right: 20
switch_list (115)
    on left: 24 25, on right: 20 25
switch_item (116)
    on left: 26, on right: 25
case_list (117)
    on left: 27 28, on right: 26 28
case_item (118)
    on left: 29 30, on right: 27 28
dcl_list (119)
    on left: 31 32, on right: 11 32
dcl_item (120)
    on left: 34, on right: 31 32
$@4 (121)
    on left: 33, on right: 34
dcl_name (122)
    on left: 35 36 37 38, on right: 34
name (123)
    on left: 39 40, on right: 127
else_opt (124)
    on left: 41 42, on right: 12
expr_opt (125)
    on left: 43 44, on right: 9 14 21 22 23
expr (126)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
    86 87 88 89 90 91 92 93 94 95 96, on right: 12 17 18 20 44 45 46
    47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 68 69
    71 72 73 80 81 82 85 93 116 119 120 134
$@5 (127)
    on left: 66, on right: 68
$@6 (128)
    on left: 67, on right: 68
splitop (129)
    on left: 97 98, on right: 80 81
constant (130)
    on left: 99 100 101 102 103, on right: 29 96
print (131)
    on left: 104 105 106, on right: 88
scan (132)
    on left: 107 108, on right: 89
variable (133)
    on left: 109 110 111, on right: 13 15 74 90 91 92 94 95
array (134)
    on left: 112 113 114, on right: 34
index (135)
    on left: 115 116, on right: 110
args (136)
    on left: 117 118, on right: 75 76 77 78 79 86 87 88 89
arg_list (137)
    on left: 119 120, on right: 118 120
formals (138)
    on left: 121 122 123, on right: 138
formal_list (139)
    on left: 124 125, on right: 123 125
formal_item (140)
    on left: 127, on right: 124 125
$@7 (141)
    on left: 126, on right: 127
members (142)
    on left: 128 129 130, on right: 109 110
member (143)
    on left: 131 132, on right: 129 130
assign (144)
    on left: 133 134, on right: 90 135
initialize (145)
    on left: 135 138, on right: 34
$@8 (146)
    on left: 136, on right: 138
$@9 (147)
    on left: 137, on right: 138


state 0

    0 $accept: . program $end

    $default  reduce using rule 6 (statement_list)

    program         go to state 1
    statement_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: statement_list . action_list
    7 statement_list: statement_list . statement

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    BREAK      shift, and go to state 9
    CONSTANT   shift, and go to state 10
    CONTINUE   shift, and go to state 11
    DECLARE    shift, and go to state 12
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FOR        shift, and go to state 15
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ITERATER   shift, and go to state 18
    ID         shift, and go to state 19
    IF         shift, and go to state 20
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    RETURN     shift, and go to state 27
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    SWITCH     shift, and go to state 35
    TOKENS     shift, and go to state 36
    UNSET      shift, and go to state 37
    WHILE      shift, and go to state 38
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47
    '{'        shift, and go to state 48

    ';'       reduce using rule 43 (expr_opt)
    $default  reduce using rule 2 (action_list)

    action_list  go to state 49
    statement    go to state 50
    expr_opt     go to state 51
    expr         go to state 52
    splitop      go to state 53
    constant     go to state 54
    print        go to state 55
    scan         go to state 56
    variable     go to state 57


state 3

    0 $accept: program $end .

    $default  accept


state 4

  101 constant: INTEGER .

    $default  reduce using rule 101 (constant)


state 5

  103 constant: UNSIGNED .

    $default  reduce using rule 103 (constant)


state 6

  100 constant: FLOATING .

    $default  reduce using rule 100 (constant)


state 7

  102 constant: STRING .

    $default  reduce using rule 102 (constant)


state 8

   75 expr: ARRAY . '[' args ']'

    '['  shift, and go to state 58


state 9

   21 statement: BREAK . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 43 (expr_opt)

    expr_opt  go to state 59
    expr      go to state 52
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57


state 10

   99 constant: CONSTANT .

    $default  reduce using rule 99 (constant)


state 11

   22 statement: CONTINUE . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 43 (expr_opt)

    expr_opt  go to state 60
    expr      go to state 52
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57


state 12

   11 statement: DECLARE . $@2 dcl_list ';'

    $default  reduce using rule 10 ($@2)

    $@2  go to state 61


state 13

  110 variable: DYNAMIC . index members

    '['  shift, and go to state 62

    $default  reduce using rule 115 (index)

    index  go to state 63


state 14

   82 expr: EXIT . '(' expr ')'

    '('  shift, and go to state 64


state 15

   13 statement: FOR . '(' variable ')' statement
   14          | FOR . '(' expr_opt ';' expr_opt ';' expr_opt ')' statement

    '('  shift, and go to state 65


state 16

   76 expr: FUNCTION . '(' args ')'

    '('  shift, and go to state 66


state 17

   77 expr: GSUB . '(' args ')'

    '('  shift, and go to state 67


state 18

   15 statement: ITERATER . '(' variable ')' statement

    '('  shift, and go to state 68


state 19

  109 variable: ID . members

    '.'  shift, and go to state 69

    $default  reduce using rule 128 (members)

    members  go to state 70
    member   go to state 71


state 20

   12 statement: IF . '(' expr ')' statement else_opt

    '('  shift, and go to state 72


state 21

  111 variable: NAME .

    $default  reduce using rule 111 (variable)


state 22

   87 expr: PRINT . '(' args ')'

    '('  shift, and go to state 73


state 23

  104 print: PRINTF .

    $default  reduce using rule 104 (print)


state 24

   86 expr: PROCEDURE . '(' args ')'

    '('  shift, and go to state 74


state 25

  105 print: QUERY .

    $default  reduce using rule 105 (print)


state 26

   83 expr: RAND . '(' ')'

    '('  shift, and go to state 75


state 27

   23 statement: RETURN . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 43 (expr_opt)

    expr_opt  go to state 76
    expr      go to state 52
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57


state 28

  107 scan: SCANF .

    $default  reduce using rule 107 (scan)


state 29

   97 splitop: SPLIT .

    $default  reduce using rule 97 (splitop)


state 30

  106 print: SPRINTF .

    $default  reduce using rule 106 (print)


state 31

   84 expr: SRAND . '(' ')'
   85     | SRAND . '(' expr ')'

    '('  shift, and go to state 77


state 32

  108 scan: SSCANF .

    $default  reduce using rule 108 (scan)


state 33

   78 expr: SUB . '(' args ')'

    '('  shift, and go to state 78


state 34

   79 expr: SUBSTR . '(' args ')'

    '('  shift, and go to state 79


state 35

   20 statement: SWITCH . '(' expr $@3 ')' '{' switch_list '}'

    '('  shift, and go to state 80


state 36

   98 splitop: TOKENS .

    $default  reduce using rule 98 (splitop)


state 37

   16 statement: UNSET . '(' DYNAMIC ')'
   17          | UNSET . '(' DYNAMIC ',' expr ')'

    '('  shift, and go to state 81


state 38

   18 statement: WHILE . '(' expr ')' statement

    '('  shift, and go to state 82


state 39

   74 expr: '&' . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 19
    NAME     shift, and go to state 21

    variable  go to state 83


state 40

   73 expr: '+' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 84
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57


state 41

   72 expr: '-' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 85
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57


state 42

   69 expr: '!' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 86
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57


state 43

   71 expr: '~' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 87
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57


state 44

   70 expr: '#' . DYNAMIC

    DYNAMIC  shift, and go to state 88


state 45

   94 expr: DEC . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 19
    NAME     shift, and go to state 21

    variable  go to state 89


state 46

   91 expr: INC . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 19
    NAME     shift, and go to state 21

    variable  go to state 90


state 47

   45 expr: '(' . expr ')'
   46     | '(' . DECLARE ')' expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DECLARE    shift, and go to state 91
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 92
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57


state 48

    8 statement: '{' . statement_list '}'

    $default  reduce using rule 6 (statement_list)

    statement_list  go to state 93


state 49

    1 program: statement_list action_list .
    3 action_list: action_list . action

    LABEL  shift, and go to state 94

    $default  reduce using rule 1 (program)

    action  go to state 95


state 50

    7 statement_list: statement_list statement .

    $default  reduce using rule 7 (statement_list)


state 51

    9 statement: expr_opt . ';'

    ';'  shift, and go to state 96


state 52

   44 expr_opt: expr .
   47 expr: expr . '<' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   51     | expr . '%' expr
   52     | expr . LS expr
   53     | expr . RS expr
   54     | expr . '>' expr
   55     | expr . LE expr
   56     | expr . GE expr
   57     | expr . EQ expr
   58     | expr . NE expr
   59     | expr . '&' expr
   60     | expr . '|' expr
   61     | expr . '^' expr
   62     | expr . '+' expr
   63     | expr . AND expr
   64     | expr . OR expr
   65     | expr . ',' expr
   68     | expr . '?' $@5 expr ':' $@6 expr
   93     | expr . IN_OP DYNAMIC

    ','    shift, and go to state 97
    '?'    shift, and go to state 98
    OR     shift, and go to state 99
    AND    shift, and go to state 100
    '|'    shift, and go to state 101
    '^'    shift, and go to state 102
    '&'    shift, and go to state 103
    NE     shift, and go to state 104
    EQ     shift, and go to state 105
    '<'    shift, and go to state 106
    '>'    shift, and go to state 107
    GE     shift, and go to state 108
    LE     shift, and go to state 109
    RS     shift, and go to state 110
    LS     shift, and go to state 111
    '+'    shift, and go to state 112
    '-'    shift, and go to state 113
    IN_OP  shift, and go to state 114
    '*'    shift, and go to state 115
    '/'    shift, and go to state 116
    '%'    shift, and go to state 117

    $default  reduce using rule 44 (expr_opt)


state 53

   80 expr: splitop . '(' expr ',' DYNAMIC ')'
   81     | splitop . '(' expr ',' DYNAMIC ',' expr ')'

    '('  shift, and go to state 118


state 54

   96 expr: constant .

    $default  reduce using rule 96 (expr)


state 55

   88 expr: print . '(' args ')'

    '('  shift, and go to state 119


state 56

   89 expr: scan . '(' args ')'

    '('  shift, and go to state 120


state 57

   90 expr: variable . assign
   92     | variable . INC
   95     | variable . DEC

    '='  shift, and go to state 121
    DEC  shift, and go to state 122
    INC  shift, and go to state 123

    $default  reduce using rule 133 (assign)

    assign  go to state 124


state 58

   75 expr: ARRAY '[' . args ']'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 117 (args)

    expr      go to state 125
    splitop   go to state 53
    constant  go to state 54
    print     go to state 55
    scan      go to state 56
    variable  go to state 57
    args      go to state 126
    arg_list  go to state 127


state 59

   21 statement: BREAK expr_opt . ';'

    ';'  shift, and go to state 128


state 60

   22 statement: CONTINUE expr_opt . ';'

    ';'  shift, and go to state 129


state 61

   11 statement: DECLARE $@2 . dcl_list ';'

    DYNAMIC   shift, and go to state 130
    FUNCTION  shift, and go to state 131
    ID        shift, and go to state 132
    NAME      shift, and go to state 133

    dcl_list  go to state 134
    dcl_item  go to state 135
    dcl_name  go to state 136


state 62

  116 index: '[' . expr ']'
